# xhs-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json
src/xhs_mcp/: server.py
